# rust-monster

./: Cargo.toml  README.md
src/: dicer.rs  lib.rs  main.rs
src/dicer/: calculate_dice_entities.rs  mod.rs  normalize_dice_roll.rs  parse_dice_roll.rs  split_dice_roll.rs
tests/: integration_test.rs
