[package]
name = "rust-monster"
version = "0.1.0"
authors = ["Mehrad Rousta <mehrad@proton.me>"]
edition = "2021"

[lib]
name = "rust_monster"
path = "src/lib.rs"

[[bin]]
name = "monster"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3"
regex = "0.2"
structopt = "0.3.26"
